# llvm-fpga

./: .gitignore  CMakeLists.txt  README.md  llvm-fpga.sh
backend/: CMakeLists.txt
backend/examples/ASTPrint/: CMakeLists.txt  componentsAST.cpp  traverseAST_libclang.cpp
backend/examples/dotprod/: createDotprod.cpp  dotprod.c  t_dotprod  top
backend/examples/dotprod/gnu/: t_dotprod.vcd
backend/examples/dotprod/src/: dotprod.vhd  memory.vhd  t_dotprod.vhd
backend/examples/ghdlExample/: hello.vhdl  hello_world
backend/examples/sobel/: createSobel.cpp
backend/examples/vecsum/: createVecsum.cpp  t_vecsum
backend/examples/vecsum/gnu/: t_vecsum.vcd
backend/examples/vecsum/src/: memory.vhd  t_vecsum.vhd  vecsum.vhd
backend/include/algorithms/: vhdlGen.hpp
backend/include/components/: cmp_add_op_s.hpp  cmp_add_reg_op_s.hpp  cmp_block_ram.hpp  cmp_counter.hpp  cmp_delay_op.hpp  cmp_if_gt_op_s.hpp  cmp_if_lt_op_s.hpp  cmp_mult_op_s.hpp  cmp_mux_m.hpp  cmp_neg_op_s.hpp  cmp_reg_mux_m_op.hpp  cmp_reg_op.hpp  cmp_sub_op_s.hpp
backend/include/core/: component.hpp  design.hpp  genericMap.hpp  port.hpp  signal.hpp
backend/src/algorithms/: componentsGen.cpp  vhdlGen.cpp
backend/src/components/: cmp_add_op_s.cpp  cmp_add_reg_op_s.cpp  cmp_block_ram.cpp  cmp_counter.cpp  cmp_delay_op.cpp  cmp_if_gt_op_s.cpp  cmp_if_lt_op_s.cpp  cmp_mult_op_s.cpp  cmp_mux_m.cpp  cmp_neg_op_s.cpp  cmp_reg_mux_m_op.cpp  cmp_reg_op.cpp  cmp_sub_op_s.cpp
backend/src/core/: component.cpp  design.cpp  genericMap.cpp  port.cpp  signal.cpp
hls/: CMakeLists.txt  DevelopmentNotes  README.txt  hls.sh  hlsDotProd.sh  hlsMax.sh
hls/include/Compiler/: Context.hpp  DependencyLevel.hpp  NodeInfo.hpp  NodeInfo.hpp.save-failed  NodeVisitor.hpp  Operation.hpp  Operation.hpp.save-failed  Synthesizer.hpp  TimingControl.hpp  Variable.hpp
hls/include/Components/: cmp_add_op.hpp  cmp_add_op_fl.hpp  cmp_add_op_s.hpp  cmp_add_reg_op_s.hpp  cmp_and_op.hpp  cmp_block_ram.hpp  cmp_const_op.hpp  cmp_counter.hpp  cmp_delay_op.hpp  cmp_delay_step_op.hpp  cmp_div_op_s.hpp  cmp_ge_op_s.hpp  cmp_gt_op.hpp  cmp_if_ge_op_s.hpp  cmp_if_gt_op_s.hpp  cmp_if_le_op_s.hpp  cmp_if_lt_op_s.hpp  cmp_if_ne_op_s.hpp  cmp_inout.hpp  cmp_module_for.hpp  cmp_mult_op_fl.hpp  cmp_mult_op_s.hpp  cmp_mux_m.hpp  cmp_mux_m_op.hpp  cmp_mux_op.hpp  cmp_neg_op_s.hpp  cmp_not_op.hpp  cmp_or_op.hpp  cmp_range_op_s.hpp  cmp_reg_mux_m_op.hpp  cmp_reg_mux_op.hpp  cmp_reg_op.hpp  cmp_shr_c_op.hpp  cmp_sub_op_s.hpp  cmp_sub_reg_op_s.hpp
hls/include/Core/: Component.hpp  Design.hpp  GenericMap.hpp  IOComponent.hpp  Port.hpp  Signal.hpp
hls/include/Exception/: EndOfFile.hpp
hls/include/FileManager/: FileBaseManager.hpp  FileReader.hpp  FileWriter.hpp
hls/include/TokenManager/: IRTokenizer.hpp  TokenCursor.hpp
hls/include/Tools/: MessageLibrary.hpp  StringUtils.hpp  StringUtils.hpp.save-failed
hls/lib/: NenyaBehaLib.vhd
hls/src/: CMakeLists.txt  HLS.cpp
hls/src/Compiler/: Context.cpp  DependencyLevel.cpp  NodeInfo.cpp  NodeVisitor.cpp  Operation.cpp  Synthesizer.cpp  TimingControl.cpp  Variable.cpp
hls/src/Components/: cmp_add_op.cpp  cmp_add_op_fl.cpp  cmp_add_op_s.cpp  cmp_add_reg_op_fl.cpp  cmp_add_reg_op_s.cpp  cmp_block_ram.cpp  cmp_const_op.cpp  cmp_counter.cpp  cmp_delay_op.cpp  cmp_div_op_fl.cpp  cmp_div_op_s.cpp  cmp_gt_op_s.cpp  cmp_if_eq_op_s.cpp  cmp_if_gt_op_s.cpp  cmp_if_lt_op_s.cpp  cmp_input.cpp  cmp_lt_op_s.cpp  cmp_mod_op_s.cpp  cmp_mult_op_s.cpp  cmp_mult_op_s_p.cpp  cmp_mux_m.cpp  cmp_neg_op_s.cpp  cmp_none_op.cpp  cmp_output.cpp  cmp_reg_mux_m_op.cpp  cmp_reg_op.cpp  cmp_shl_c_op.cpp  cmp_shl_c_op_s.cpp  cmp_shr_c_op_s.cpp  cmp_sub_op.cpp  cmp_sub_op_fl.cpp  cmp_sub_op_s.cpp  cmp_xor_op.cpp
hls/src/Core/: Component.cpp  Design.cpp  GenericMap.cpp  IOComponent.cpp  Port.cpp  Signal.cpp
hls/src/FileManager/: FileBaseManager.cpp  FileReader.cpp  FileWriter.cpp
hls/src/TokenManager/: IRTokenizer.cpp  TokenCursor.cpp
hls/tests/: NenyaBehaLib.vhd  alteraReport.csv  lalp.vim  xilinxReport.csv
hls/tests/Old/: Autocorrelation.c  Autocorrelation.ll  BitCount.c  BitCount.ll  BubbleSort.c  BubbleSort.ll  Dotprod.c  Dotprod.ll  Fibonacci.c  Fibonacci.ll  Max.c  Max.ll  VectorSum.c  VectorSum.ll
hls/tests/addsub/: addsub.alp  addsub.c  addsub_hw.dot  addsub_sw.dot
hls/tests/addsub/gnu/: t_addsub.vcd
hls/tests/addsub/src/: addsub.vhd  t_addsub.vhd
hls/tests/adpcm_coder/: adpcm_coder.alp  adpcm_coder.c  adpcm_coder_hw.dot  adpcm_coder_sw.dot
hls/tests/adpcm_coder/gnu/: t_adpcm_coder.vcd
hls/tests/adpcm_coder/src/: adpcm_coder.vhd  memory.vhd  t_adpcm_coder.vhd
hls/tests/adpcm_decoder/: adpcm_decoder.alp  adpcm_decoder_hw.dot  adpcm_decoder_sw.dot
hls/tests/adpcm_decoder/src/: adpcm_decoder.vhd  memory.vhd  t_adpcm_decoder.vhd
hls/tests/dotprod/: dotprod (cópia).c  dotprod.alp  dotprod.c  dotprod_hw.dot  dotprod_sw.dot  t_dotprod
hls/tests/dotprod/gnu/: t_dotprod.sav  t_dotprod.vcd
hls/tests/dotprod/src/: dotprod.vhd  memory.vhd  t_dotprod.vhd
hls/tests/fdct/: fdct.alp  fdct.c  fdct_hw.dot  fdct_sw.dot
hls/tests/fdct/src/: fdct.vhd  t_fdct.vhd
hls/tests/fibonacci_data_reuse/: fibonacci_data_reuse.alp  fibonacci_data_reuse.c  fibonacci_data_reuse_hw.dot  fibonacci_data_reuse_sw.dot
hls/tests/fibonacci_data_reuse/gnu/: t_fibonacci_data_reuse.vcd
hls/tests/fibonacci_data_reuse/src/: fibonacci_data_reuse.vhd  t_fibonacci_data_reuse.vhd
hls/tests/fir/: fir.alp  fir.c  fir_hw.dot  fir_sw.dot
hls/tests/matmult/: matmult.alp  matmult.c  matmult_hw.dot  matmult_sw.dot
hls/tests/max/: max.alp  max.c  max_hw.dot  max_sw.dot
hls/tests/sobel/: sobel.alp  sobel.c  sobel_hw.dot  sobel_sw.dot
hls/tests/sobel_alt/: sobel_alt.alp  sobel_alt_hw.dot  sobel_alt_sw.dot
hls/tests/vecsum/: vecsum.alp  vecsum.c  vecsum_hw.dot  vecsum_sw.dot
hls/tests/vecsum_asynchronous/: vecsum_asynchronous.alp  vecsum_asynchronous_hw.dot  vecsum_asynchronous_sw.dot
hls/testsOutput/dotprod/: dotprod.vhd  memory.vhd
hls/testsOutput/max/: max.vhd  memory.vhd
teste-lemon/: CMakeLists.txt  TesteSCC.cpp
(+24 files in other folders)
